--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -8,6 +8,9 @@
         mc:Ignorable="d"
         Title="Trade analyzer" MinHeight="450" MinWidth="800"
         WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVisibility" />
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -47,8 +50,8 @@
                                      Language=""/>
             </TabItem>
 
-            <TabItem Header="График" IsSelected="True">
-                <Grid DataContext="{Binding Path=ChartData1}">
+            <TabItem x:Name="viewItem" Header="График" IsSelected="True" DataContext="{Binding Path=ViewItem}">
+                <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
@@ -80,13 +83,15 @@
                                   SelectedItem="{Binding Path=SelectedZ, Mode=TwoWay}" />
                     </Grid>
 
-                    <telerik:RadCartesianChart Grid.Row="1">
+                    <telerik:RadCartesianChart Grid.Row="1" 
+                                               DataContext="{Binding Path=ChartData}"
+                                               Visibility="{Binding ElementName=viewItem, Path=DataContext.IsChartVisible,
+                                                    Converter={StaticResource BoolToVisibility}, UpdateSourceTrigger=PropertyChanged}">
                         <telerik:RadCartesianChart.Behaviors>
                             <telerik:ChartTrackBallBehavior />
                         </telerik:RadCartesianChart.Behaviors>
                         <telerik:RadCartesianChart.HorizontalAxis>
-                            <telerik:LinearAxis Maximum="{Binding Path=MaximimX}"
-                                            Minimum="{Binding Path=MinimumX}"/>
+                            <telerik:LinearAxis Maximum="{Binding Path=MaximimX}" Minimum="{Binding Path=MinimumX}"/>
                         </telerik:RadCartesianChart.HorizontalAxis>
                         <telerik:RadCartesianChart.VerticalAxis>
                             <telerik:LinearAxis />
@@ -95,8 +100,79 @@
                             <telerik:ScatterLineSeries ItemsSource="{Binding Path=Items}" YValueBinding="Y" XValueBinding="X" />
                         </telerik:RadCartesianChart.Series>
                     </telerik:RadCartesianChart>
+
+                    <telerik:RadHeatMap Grid.Row="1" 
+                                        ShowToolTips="True" 
+                                        DataContext="{Binding Path=HeatMapData}"
+                                        Visibility="{Binding ElementName=viewItem, Path=DataContext.IsHeatMapVisible,
+                                                    Converter={StaticResource BoolToVisibility}, UpdateSourceTrigger=PropertyChanged}">
+                        <telerik:RadHeatMap.Resources>
+                            <telerik:HeatMapValueGradientColorizer x:Key="ValueGradientColorizer3">
+                                <GradientStop Offset="0" Color="Gainsboro" />
+                                <GradientStop Offset="1" Color="Green" />
+                            </telerik:HeatMapValueGradientColorizer>
+
+                            <DataTemplate x:Key="ToolTipTemplate">
+                                <Border Visibility="Visible" Margin="0 0 5 5">
+                                    <Border.Effect>
+                                        <DropShadowEffect BlurRadius="6" ShadowDepth="1" Color="#FF999999" Direction="345"/>
+                                    </Border.Effect>
+                                    <Grid Background="White">
+                                        <Grid.Resources>
+                                            <Style TargetType="TextBlock">
+                                                <Setter Property="FontFamily" Value="Segoe UI" />
+                                                <Setter Property="FontSize" Value="11" />
+                                                <Setter Property="Foreground" Value="Black" />
+                                            </Style>
+                                        </Grid.Resources>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="7" />
+                                            <ColumnDefinition Width="85" />
+                                        </Grid.ColumnDefinitions>
+                                        <Border Margin="1 1 2 1">
+                                            <Border.Background>
+                                                <SolidColorBrush Color="{Binding Color}" />
+                                            </Border.Background>
+                                        </Border>
+                                        <Border Grid.Column="1" Padding="2">
+                                            <Grid>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="Auto" />
+                                                    <RowDefinition />
+                                                    <RowDefinition />
+                                                </Grid.RowDefinitions>
+                                                <TextBlock Grid.Row="0" Text="{Binding DataItem.Z}" TextWrapping="Wrap" />
+                                                <StackPanel Grid.Row="1" Orientation="Horizontal">
+                                                    <TextBlock Text="X: " />
+                                                    <TextBlock Text="{Binding DataItem.X}" />
+                                                </StackPanel>
+                                                <StackPanel Grid.Row="2" Orientation="Horizontal">
+                                                    <TextBlock Text="Y: " />
+                                                    <TextBlock Text="{Binding DataItem.Y}" />
+                                                </StackPanel>
+                                            </Grid>
+                                        </Border>
+                                    </Grid>
+                                </Border>
+                            </DataTemplate>
+                        </telerik:RadHeatMap.Resources>
+                        <telerik:RadHeatMap.ColumnHeaderSettings>
+                            <telerik:HeatMapColumnHeaderSettings LabelsPanelPosition="Bottom" />
+                        </telerik:RadHeatMap.ColumnHeaderSettings>
+                        <telerik:RadHeatMap.Definition>
+                            <telerik:CategoricalDefinition
+                                        ItemsSource="{Binding Path=Items}"
+                                        RowGroupMemberPath="Y" 
+                                        ColumnGroupMemberPath="X"
+                                        ValuePath="Z"
+                                        Colorizer="{StaticResource ValueGradientColorizer3}">
+                            </telerik:CategoricalDefinition>
+                        </telerik:RadHeatMap.Definition>
+                        <telerik:RadHeatMap.ToolTipSettings>
+                            <telerik:HeatMapToolTipSettings ToolTipTemplate="{StaticResource ToolTipTemplate}" />
+                        </telerik:RadHeatMap.ToolTipSettings>
+                    </telerik:RadHeatMap>
                 </Grid>
-                
             </TabItem>
 
         </TabControl>
