--- a/src/ViewItemControl.xaml
+++ b/src/ViewItemControl.xaml
@@ -19,28 +19,67 @@
 
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" MinWidth="220" />
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-            </Grid.RowDefinitions>
 
-            <Label Grid.Column="0" Grid.Row="0">X:</Label>
-            <Label Grid.Column="0" Grid.Row="1">Y:</Label>
-            <Label Grid.Column="0" Grid.Row="2">Z:</Label>
+            <Grid Grid.Column="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" MinWidth="200" />
+                    <ColumnDefinition Width="Auto" MinWidth="60" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
 
-            <ComboBox Grid.Column="1" Grid.Row="0" Margin="2" HorizontalAlignment="Stretch"
-                                  ItemsSource="{Binding Path=Columns}"
-                                  SelectedItem="{Binding Path=SelectedX, Mode=TwoWay}" />
-            <ComboBox Grid.Column="1" Grid.Row="1" Margin="2" HorizontalAlignment="Stretch"
-                                  ItemsSource="{Binding Path=Columns}"
-                                  SelectedItem="{Binding Path=SelectedY, Mode=TwoWay}" />
-            <ComboBox Grid.Column="1" Grid.Row="2" Margin="2" HorizontalAlignment="Stretch"
-                                  ItemsSource="{Binding Path=Columns}"
-                                  SelectedItem="{Binding Path=SelectedZ, Mode=TwoWay}" />
+                <Label Grid.Column="0" Grid.Row="0">Ф1:</Label>
+
+                <ComboBox Grid.Column="1" Grid.Row="0" Margin="2" HorizontalAlignment="Stretch"
+                                      ItemsSource="{Binding Path=Columns}"
+                                      SelectedItem="{Binding Path=FilterColumn1, Mode=TwoWay}" />
+                <ComboBox Grid.Column="2" Grid.Row="0" Margin="2" HorizontalAlignment="Stretch"
+                                      ItemsSource="{Binding Path=FilterValues1}"
+                                      SelectedItem="{Binding Path=FilterSelected1, Mode=TwoWay}" />
+
+                <Label Grid.Column="0" Grid.Row="1">Ф2:</Label>
+
+                <ComboBox Grid.Column="1" Grid.Row="1" Margin="2" HorizontalAlignment="Stretch"
+                                      ItemsSource="{Binding Path=Columns}"
+                                      SelectedItem="{Binding Path=FilterColumn2, Mode=TwoWay}" />
+                <ComboBox Grid.Column="2" Grid.Row="1" Margin="2" HorizontalAlignment="Stretch"
+                                      ItemsSource="{Binding Path=FilterValues2}"
+                                      SelectedItem="{Binding Path=FilterSelected2, Mode=TwoWay}" />
+            </Grid>
+
+            <Grid Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" MinWidth="200" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                
+                <Label Grid.Column="0" Grid.Row="0">X:</Label>
+                <Label Grid.Column="0" Grid.Row="1">Y:</Label>
+                <Label Grid.Column="0" Grid.Row="2">Z:</Label>
+
+                <ComboBox Grid.Column="1" Grid.Row="0" Margin="2" HorizontalAlignment="Stretch"
+                                      ItemsSource="{Binding Path=Columns}"
+                                      SelectedItem="{Binding Path=SelectedX, Mode=TwoWay}" />
+                <ComboBox Grid.Column="1" Grid.Row="1" Margin="2" HorizontalAlignment="Stretch"
+                                      ItemsSource="{Binding Path=Columns}"
+                                      SelectedItem="{Binding Path=SelectedY, Mode=TwoWay}" />
+                <ComboBox Grid.Column="1" Grid.Row="2" Margin="2" HorizontalAlignment="Stretch"
+                                      ItemsSource="{Binding Path=Columns}"
+                                      SelectedItem="{Binding Path=SelectedZ, Mode=TwoWay}" />
+            </Grid>
         </Grid>
 
         <telerik:RadCartesianChart Grid.Row="1" 
@@ -54,7 +93,9 @@
                 <telerik:LinearAxis Maximum="{Binding Path=MaximimX}" Minimum="{Binding Path=MinimumX}"/>
             </telerik:RadCartesianChart.HorizontalAxis>
             <telerik:RadCartesianChart.VerticalAxis>
+                <!--telerik:LinearAxis Maximum="{Binding Path=MaximimY}" Minimum="{Binding Path=MinimumY}"/-->
                 <telerik:LinearAxis />
+                <!--telerik:LinearAxis Maximum="1.4" Minimum="0.8" /-->
             </telerik:RadCartesianChart.VerticalAxis>
             <telerik:RadCartesianChart.Series>
                 <telerik:ScatterLineSeries ItemsSource="{Binding Path=Items}" YValueBinding="Y" XValueBinding="X" />
