--- a/src/ViewItemControl.xaml
+++ b/src/ViewItemControl.xaml
@@ -5,10 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TradeAnalyser"
              xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVisibility" />
+        <Style TargetType="{x:Type Control}" x:Key="baseStyle">
+            <Setter Property="FontSize" Value="11" />
+        </Style>
     </UserControl.Resources>
     
     <Grid x:Name="viewItem">
@@ -18,6 +22,11 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
+            <Grid.Resources>
+                <Style TargetType="{x:Type Label}" BasedOn="{StaticResource baseStyle}"></Style>
+                <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource baseStyle}"></Style>
+                <Style TargetType="{x:Type ComboBox}" BasedOn="{StaticResource baseStyle}"></Style>
+            </Grid.Resources>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
@@ -82,96 +91,129 @@
             </Grid>
         </Grid>
 
-        <telerik:RadCartesianChart Grid.Row="1" 
-                                               DataContext="{Binding Path=ChartData}"
-                                               Visibility="{Binding ElementName=viewItem, Path=DataContext.IsChartVisible,
-                                                    Converter={StaticResource BoolToVisibility}, UpdateSourceTrigger=PropertyChanged}">
-            <telerik:RadCartesianChart.Behaviors>
-                <telerik:ChartTrackBallBehavior />
-            </telerik:RadCartesianChart.Behaviors>
-            <telerik:RadCartesianChart.HorizontalAxis>
-                <telerik:LinearAxis Maximum="{Binding Path=MaximimX}" Minimum="{Binding Path=MinimumX}"/>
-            </telerik:RadCartesianChart.HorizontalAxis>
-            <telerik:RadCartesianChart.VerticalAxis>
-                <!--telerik:LinearAxis Maximum="{Binding Path=MaximimY}" Minimum="{Binding Path=MinimumY}"/-->
-                <telerik:LinearAxis />
-                <!--telerik:LinearAxis Maximum="1.4" Minimum="0.8" /-->
-            </telerik:RadCartesianChart.VerticalAxis>
-            <telerik:RadCartesianChart.Series>
-                <telerik:ScatterLineSeries ItemsSource="{Binding Path=Items}" YValueBinding="Y" XValueBinding="X" />
-            </telerik:RadCartesianChart.Series>
-        </telerik:RadCartesianChart>
+        <Grid Grid.Row="1"
+              DataContext="{Binding Path=ChartData}"
+              Visibility="{Binding ElementName=viewItem, Path=DataContext.IsChartVisible,
+                                        Converter={StaticResource BoolToVisibility}, UpdateSourceTrigger=PropertyChanged}" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
 
-        <telerik:RadHeatMap Grid.Row="1" 
-                            ShowToolTips="True" 
-                            DataContext="{Binding Path=HeatMapData}"
-                            Visibility="{Binding ElementName=viewItem, Path=DataContext.IsHeatMapVisible,
-                                        Converter={StaticResource BoolToVisibility}, UpdateSourceTrigger=PropertyChanged}">
-            <telerik:RadHeatMap.Resources>
-                <telerik:HeatMapValueGradientColorizer x:Key="ValueGradientColorizer3">
-                    <GradientStop Offset="0" Color="Gainsboro" />
-                    <GradientStop Offset="1" Color="Green" />
-                </telerik:HeatMapValueGradientColorizer>
+            <StackPanel Orientation="Horizontal">
+                <StackPanel.Resources>
+                        <Style TargetType="{x:Type Label}" BasedOn="{StaticResource baseStyle}"></Style>
+                </StackPanel.Resources>
+                <Label Content="{Binding Min}" ContentStringFormat="Min: {0:N2}" />
+                <Label Content="{Binding Max}" ContentStringFormat="Max: {0:N2}" />
+                <Label Content="{Binding Avg}" ContentStringFormat="Avg: {0:N2}" />
+            </StackPanel>
+            
+            <telerik:RadCartesianChart Grid.Row="1">
+                <telerik:RadCartesianChart.Behaviors>
+                    <telerik:ChartTrackBallBehavior />
+                </telerik:RadCartesianChart.Behaviors>
+                <telerik:RadCartesianChart.HorizontalAxis>
+                    <telerik:LinearAxis Maximum="{Binding Path=MaximimX}" Minimum="{Binding Path=MinimumX}"/>
+                </telerik:RadCartesianChart.HorizontalAxis>
+                <telerik:RadCartesianChart.VerticalAxis>
+                    <!--telerik:LinearAxis Maximum="{Binding Path=MaximimY}" Minimum="{Binding Path=MinimumY}"/-->
+                    <telerik:LinearAxis />
+                    <!--telerik:LinearAxis Maximum="1.4" Minimum="0.8" /-->
+                </telerik:RadCartesianChart.VerticalAxis>
+                <telerik:RadCartesianChart.Series>
+                    <telerik:ScatterLineSeries ItemsSource="{Binding Path=Items}" YValueBinding="Y" XValueBinding="X" />
+                </telerik:RadCartesianChart.Series>
+            </telerik:RadCartesianChart>
+        </Grid>
 
-                <DataTemplate x:Key="ToolTipTemplate">
-                    <Border Visibility="Visible" Margin="0 0 5 5">
-                        <Border.Effect>
-                            <DropShadowEffect BlurRadius="6" ShadowDepth="1" Color="#FF999999" Direction="345"/>
-                        </Border.Effect>
-                        <Grid Background="White">
-                            <Grid.Resources>
-                                <Style TargetType="TextBlock">
-                                    <Setter Property="FontFamily" Value="Segoe UI" />
-                                    <Setter Property="FontSize" Value="11" />
-                                    <Setter Property="Foreground" Value="Black" />
-                                </Style>
-                            </Grid.Resources>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="7" />
-                                <ColumnDefinition Width="85" />
-                            </Grid.ColumnDefinitions>
-                            <Border Margin="1 1 2 1">
-                                <Border.Background>
-                                    <SolidColorBrush Color="{Binding Color}" />
-                                </Border.Background>
-                            </Border>
-                            <Border Grid.Column="1" Padding="2">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto" />
-                                        <RowDefinition />
-                                        <RowDefinition />
-                                    </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Text="{Binding DataItem.Z}" TextWrapping="Wrap" />
-                                    <StackPanel Grid.Row="1" Orientation="Horizontal">
-                                        <TextBlock Text="X: " />
-                                        <TextBlock Text="{Binding DataItem.X}" />
-                                    </StackPanel>
-                                    <StackPanel Grid.Row="2" Orientation="Horizontal">
-                                        <TextBlock Text="Y: " />
-                                        <TextBlock Text="{Binding DataItem.Y}" />
-                                    </StackPanel>
-                                </Grid>
-                            </Border>
-                        </Grid>
-                    </Border>
-                </DataTemplate>
-            </telerik:RadHeatMap.Resources>
-            <telerik:RadHeatMap.ColumnHeaderSettings>
-                <telerik:HeatMapColumnHeaderSettings LabelsPanelPosition="Bottom" />
-            </telerik:RadHeatMap.ColumnHeaderSettings>
-            <telerik:RadHeatMap.Definition>
-                <telerik:CategoricalDefinition
-                                        ItemsSource="{Binding Path=Items}"
-                                        RowGroupMemberPath="Y" 
-                                        ColumnGroupMemberPath="X"
-                                        ValuePath="Z"
-                                        Colorizer="{StaticResource ValueGradientColorizer3}">
-                </telerik:CategoricalDefinition>
-            </telerik:RadHeatMap.Definition>
-            <telerik:RadHeatMap.ToolTipSettings>
-                <telerik:HeatMapToolTipSettings ToolTipTemplate="{StaticResource ToolTipTemplate}" />
-            </telerik:RadHeatMap.ToolTipSettings>
-        </telerik:RadHeatMap>
+        <Grid Grid.Row="1"
+              DataContext="{Binding Path=HeatMapData}"
+              Visibility="{Binding ElementName=viewItem, Path=DataContext.IsHeatMapVisible,
+                            Converter={StaticResource BoolToVisibility}, UpdateSourceTrigger=PropertyChanged}">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <StackPanel Orientation="Horizontal">
+                <StackPanel.Resources>
+                    <Style TargetType="{x:Type Label}" BasedOn="{StaticResource baseStyle}"></Style>
+                </StackPanel.Resources>
+                <Label Content="{Binding Min}" ContentStringFormat="Min: {0:N2}" />
+                <Label Content="{Binding Max}" ContentStringFormat="Max: {0:N2}" />
+                <Label Content="{Binding Avg}" ContentStringFormat="Avg: {0:N2}" />
+            </StackPanel>
+            
+            <telerik:RadHeatMap Grid.Row="1" 
+                                ShowToolTips="True">
+                <telerik:RadHeatMap.Resources>
+                    <telerik:HeatMapValueGradientColorizer x:Key="ValueGradientColorizer3">
+                        <GradientStop Offset="0" Color="Gainsboro" />
+                        <GradientStop Offset="1" Color="Green" />
+                    </telerik:HeatMapValueGradientColorizer>
+
+                    <DataTemplate x:Key="ToolTipTemplate">
+                        <Border Visibility="Visible" Margin="0 0 5 5">
+                            <Border.Effect>
+                                <DropShadowEffect BlurRadius="6" ShadowDepth="1" Color="#FF999999" Direction="345"/>
+                            </Border.Effect>
+                            <Grid Background="White">
+                                <Grid.Resources>
+                                    <Style TargetType="TextBlock">
+                                        <Setter Property="FontFamily" Value="Segoe UI" />
+                                        <Setter Property="FontSize" Value="11" />
+                                        <Setter Property="Foreground" Value="Black" />
+                                    </Style>
+                                </Grid.Resources>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="7" />
+                                    <ColumnDefinition Width="85" />
+                                </Grid.ColumnDefinitions>
+                                <Border Margin="1 1 2 1">
+                                    <Border.Background>
+                                        <SolidColorBrush Color="{Binding Color}" />
+                                    </Border.Background>
+                                </Border>
+                                <Border Grid.Column="1" Padding="2">
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition />
+                                            <RowDefinition />
+                                        </Grid.RowDefinitions>
+                                        <TextBlock Grid.Row="0" Text="{Binding DataItem.Z}" TextWrapping="Wrap" />
+                                        <StackPanel Grid.Row="1" Orientation="Horizontal">
+                                            <TextBlock Text="X: " />
+                                            <TextBlock Text="{Binding DataItem.X}" />
+                                        </StackPanel>
+                                        <StackPanel Grid.Row="2" Orientation="Horizontal">
+                                            <TextBlock Text="Y: " />
+                                            <TextBlock Text="{Binding DataItem.Y}" />
+                                        </StackPanel>
+                                    </Grid>
+                                </Border>
+                            </Grid>
+                        </Border>
+                    </DataTemplate>
+                </telerik:RadHeatMap.Resources>
+                <telerik:RadHeatMap.ColumnHeaderSettings>
+                    <telerik:HeatMapColumnHeaderSettings LabelsPanelPosition="Bottom" />
+                </telerik:RadHeatMap.ColumnHeaderSettings>
+                <telerik:RadHeatMap.Definition>
+                    <telerik:CategoricalDefinition
+                                                ItemsSource="{Binding Path=Items}"
+                                                RowGroupMemberPath="Y" 
+                                                ColumnGroupMemberPath="X"
+                                                ValuePath="Z"
+                                                Colorizer="{StaticResource ValueGradientColorizer3}">
+                    </telerik:CategoricalDefinition>
+                </telerik:RadHeatMap.Definition>
+                <telerik:RadHeatMap.ToolTipSettings>
+                    <telerik:HeatMapToolTipSettings ToolTipTemplate="{StaticResource ToolTipTemplate}" />
+                </telerik:RadHeatMap.ToolTipSettings>
+            </telerik:RadHeatMap>
+        </Grid>
     </Grid>
 </UserControl>
